--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
-<div>
-    <h3>This is the landing template.  It comes from <code>templates/home.html</code>.</h3>
-    <h3>It has it's own contrller defined in <code>app.js</code>, 
-    which is how we'll show the variable <code>$scope.number</code> 
-    which is equal to {{number}}.</h3>
+<!--Header and intro to the website -->
+<div class="container" id="initial">
+	<header>
+	  <h1>Hi, I'm Royce!</h1>
+	  <h2>I like to Design &amp; Code.</h2>
+	</header>
 </div>
