--- a/css/app.css
+++ b/css/app.css
@@ -113,3 +113,36 @@ footer {
 		font-size: 30px;
 	}
 }
+
+/* THIS IS BLAH */
+h4 > a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+h4 > a:hover {
+  color: #000;
+}
+
+h4 > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+h4 > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+/* BLAH */
