--- a/css/app.css
+++ b/css/app.css
@@ -17,23 +17,15 @@ h2 {
 	margin: 0px;
 }
 
-/*Makes the navbar have a certain background color, fixed at top, changes the font,
+/*Makes the nav have a certain background color, fixed at top, changes the font,
 width accross the screen and have no bullet points*/
 nav {
-	font-family: sans-serif;
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	background-color: #181C22;
-	width:100%;
-	height: 35px;
-	z-index: 1000;
-	list-style: none;
+	position: relative;
 	text-align: center;
 }
 
-/*Makes the links in the navbar change a certain color when hovered over*/
-nav a {
+/*Makes the links in the nav change a certain color when hovered over*/
+a {
 	color: black;
 	padding: 0.5em;
 	display:inline;
@@ -114,7 +106,7 @@ footer {
 	}
 }
 
-/* THIS IS BLAH */
+/* Animation: This is for the underlining animation on homepage */
 h4 > a {
   position: relative;
   color: #000;
@@ -145,4 +137,4 @@ h4 > a:hover:before {
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
-/* BLAH */
+/* Animation END*/
